# scarab

./: .gitignore  README.md  pyproject.toml
scarab/: crawlers.py  download.py  utils.py
tests/: test_crawlers.py  test_download.py
